<resources>
    <string name="app_name">Fields</string>
    <string name="logoutText">Log out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="search_hint">Search</string>
    <string name="action_settings">Settings</string>
    <string name="friends">Friends</string>
    <string name="realname">Real name</string>
    <string name="username">Username</string>
    <string name="alread_have_an_account">"Already have an account? Sign in"</string>
    <string name="logo">Logo</string>
    <string name="welcome">Welcome to Fields! Let\'s create an account for you</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="forgot_password_text">Please enter your user\'s email so we can send you a message to change the password! You\'ll be back on Fields in no time </string>
    <string name="imtext">I\'m</string>
    <string name="people_here">%1$s People here</string>
    <string name="not_finding_field">Not finding your field? Add new Field here and earn reputation!</string>
    <string name="field_name">Field name</string>
    <string name="edit_profile_string">Edit profile</string>
    <string name="press_text">Tap to change profile picture</string>
    <string name="playing_position">Playing position</string>
    <string name="fields_plus">FIELDS Plus</string>
    <string name="field_area">Field City</string>
    <string name="field_address">Field Address</string>
    <string name="field_type">Field type</string>
    <string name="goal_count">Goal count</string>
    <string name="press_text2">Tap to choose field picture</string>
    <string name="press_text3">Tap to choose team picture</string>
    <string name="field_access_text">Field access type</string>
    <string name="goto_map">OK, Go to map</string>
    <string name="edit_field">Edit Field</string>
    <string name="end_training">End training</string>
    <string name="currently_training_at">Currently training at..</string>
    <string name="training_time_text">Training time</string>
    <string name="done">Done</string>
    <string name="start_training_here">Start training here</string>
    <string name="you_earned">You earned</string>
    <string name="level">Team\'s playing level</string>
    <string name="team_country">Team country</string>
    <string name="events">Events</string>
    <string name="event_type">Event type</string>
    <string name="event_date">Event date</string>
    <string name="event_location">Event Location</string>
    <string name="choose_field">Choose field</string>
    <string name="search_field">Search Field</string>
    <string name="no_results_found">No results found</string>
    <string name="publish">Publish</string>
    <string name="error">This date has already passed</string>
    <string name="error2">Event should not end before it has started</string>
    <string name="location_not_given">Field not given</string>
    <string name="taking_part">Taking part</string>
    <string name="out">Out</string>
    <string name="in">In</string>
    <string name="open">Open</string>
    <string name="you">You</string>
    <string name="join_team">Join team</string>
    <string name="leave_team">Leave team</string>
    <string name="pending_players">Pending players</string>
    <string name="write">Write</string>
    <string name="player_position_role_given">%1$s, %2$s</string>
    <string name="player_position_role_not_given">%1$s</string>
    <string name="minutes"> minutes</string>
    <string name="hours"> hours</string>
    <string name="days"> days</string>
    <string name="last_seen_at">Last seen at: %1$s, %2$s ago</string>
    <string name="at_ago">at %1$s, %2$s ago</string>
    <string name="error_occurred_loading_document">An error occurred while loading data. Please check your internet connection and try again </string>
    <string name="not_at_any_field">Not at any field</string>
    <string name="not_at_team">Not at any team</string>
    <string name="training">%1$s Training</string>
    <string name="profile_image">Profile image</string>
    <string name="badge">Badge</string>
    <string name="feed_button">Feed button</string>
    <string name="profile_button">Profile button</string>
    <string name="reputation">%1$s Reputation</string>
    <string name="feed">Feed</string>
    <string name="team">Team</string>
    <string name="no_events_coming">No upcoming events. Time to relax!</string>
    <string name="players">Players</string>
    <string name="edit_team">Edit team</string>
    <string name="training_time">%1$s - %2$s</string>
    <string name="event_field">at %1$s</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="are_you_sure">Are you sure you want to leave the team?</string>
    <string name="team_username">team\'s username</string>
    <string name="team_full_name">Team\'s Full Name</string>
    <string name="error_team_full_name">Please enter Team\'s full name</string>
    <string name="error_team_username">Please enter Team\'s username</string>
    <string name="error_occurred_creating_team">An error occurred creating team. Please try again</string>
    <string name="you_are_in_team">You are already in a team or you have a request pending</string>
    <string name="team_created_successfully">Team created successfully</string>
    <string name="create_new_team">Create New Team</string>
    <string name="create_team">Create Team</string>
    <string name="you_arent_in_any_team">You aren\'t in any team. Join a team now or create a new one to get the best out of Fields! </string>
    <string name="join_existing_team">Join existing team</string>
    <string name="no_pending_players">No requests pending. When player wants to join your team, the request will appear here!</string>
    <string name="manage_team">Manage your team </string>
    <string name="set_event">Set team events </string>
    <string name="see_who_is_in">See who\'s in and out from events </string>
    <string name="chat_with_team">Chat with team (Fields Plus) </string>
    <string name="stay">Stay</string>
    <string name="event_details">Event details</string>
    <string name="delete_event">Delete event</string>
    <string name="create_new_event">Create New Event</string>
    <string name="discover">Discover</string>
    <string name="level_up2">Only one of your team\'s members need to have Fields</string>
    <string name="level_up3">in order to open the</string>
    <string name="team_chat_feature">team chat</string>
    <string name="conversation">Conversation</string>
    <string name="plus">Plus</string>
    <string name="plus_comma">Plus!</string>
    <string name="chat">Chat</string>
    <string name="request_sent">Request sent</string>
    <string name="goals">Goals: %1$s</string>
    <string name="address">Address: %1$s</string>
    <string name="access_type">Access Type: %1$s</string>
    <string name="create_new_field">Create New Field</string>
    <string name="please_enter_fields_name">Please enter Field name</string>
    <string name="please_enter_field_city">Please enter the city this Field is located at</string>
    <string name="please_enter_field_address">Please enter the address of this Field</string>
    <string name="error_occurred_creating_field">Error occurred creating Field. Please try again</string>
    <string name="field_created_successfully">Field created successfully!</string>
    <string name="field_type_info">Field Type: %1$s</string>
    <string name="info">Info</string>
    <string name="you_are_training_here">You\'re training here</string>
    <string name="current_training">Current Training</string>
    <string name="field">Field</string>
    <string name="no_upcoming_events_field">No upcoming events on this Field. Great time to go out and play!</string>
    <string name="reputation_count">%1$s Reputation</string>
    <string name="training_summary">Training Summary</string>
    <string name="no_friends">You haven\'t added any friends. Add your friends or invite them to Fields for maximum fun!</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_real_name">Please enter real name</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_valid_password">Please enter valid password</string>
    <string name="old_password_is_wrong">Old password is wrong</string>
    <string name="password_changed">Password changed</string>
    <string name="error_password_length">Password length should be at least 6 characters </string>
    <string name="no_upcoming_events_detail">No upcoming events</string>
    <string name="add_friend">Add friend</string>
    <string name="added_as_friend">Added as friend</string>
    <string name="reputation_text">Reputation</string>
    <string name="you_currently_have">You currently have</string>
    <string name="your_current_badge">Your current badge:</string>
    <string name="until_badge">%1$s Reputation until next badge!</string>
    <string name="max_badge">You have unlocked all badges. Unbelievable job!</string>
    <string name="level_up_training">Track your</string>
    <string name="level_up_training2">by upgrading to Fields</string>
    <string name="training_history">training history</string>
    <string name="min">min</string>
    <string name="h">h</string>
    <string name="hour">hour</string>
    <string name="day">day</string>
    <string name="trainings">%1$s trainings</string>
    <string name="training_history_title">Training History</string>
    <string name="fields">Fields</string>
    <string name="users">Users</string>
    <string name="teams">Teams</string>
    <string name="delete">Delete</string>
    <string name="your_team">Your Team</string>
    <string name="try_for_free">Try For Free</string>
    <string name="level_up">Level up your football game by upgrading to Fields</string>
    <string name="plus_feature">Track your training history</string>
    <string name="plus_feature_2">Save favorite Fields for fast use</string>
    <string name="plus_feature_3">Be the good guy and open the chat feature for your Team</string>
    <string name="features">Features</string>
    <string name="much_more_coming">Much more coming in the future!</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="email_sent">Email sent</string>
    <string name="error_email_password">Email and password don\'t match up</string>
    <string name="no_trainings">You don\'t have any trainings yet!</string>
    <string name="favorite">Favorite</string>
    <string name="favorited">Favorited</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="thank_you">Thank you for upgrading to Fields Plus. </string>
    <string name="appreciate">We appreciate dedicated players like you. Hope you enjoy your new features!</string>
    <string name="favorite_fields">Favorite Fields</string>
    <string name="you_havent_added_favorite_fields">You haven\'t added favorite fields. Do so by searching a field and pressing the star icon on the top bar!</string>
    <string name="start_training_by">Start training by searching the desired field!</string>
    <string name="new_followers">New Followers</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_by">Delete account by entering your user data</string>
</resources>