<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFieldOnlyActivity">

    <TextView
        android:id="@+id/start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/start_training_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        />

    <SearchView

        android:id="@+id/search1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_view"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/search_hint"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_text"
        />

    <com.fields.curiumx.fields.EmptyRecyclerView
        android:id="@+id/fieldRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/area_name_thing1"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/textViews_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_results_found"
        />

    <View
        android:id="@+id/div_search"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/DividerColor"
        app:layout_constraintTop_toBottomOf="@id/area_name_thing1"
        />

    <LinearLayout
        android:id="@+id/area_name_thing1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search1"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        >

        <Button
            android:id="@+id/field_by_name1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:text="@string/field_name"
            android:background="@color/Background_Fields"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/field_by_area1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="1dp"
            android:text="@string/field_area"
            android:background="@color/Background_Fields"
            style="?android:attr/borderlessButtonStyle"
            />




    </LinearLayout>

    <Button
        android:id="@+id/add_new_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textAllCaps="false"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_view"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="1dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/not_finding_field"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>

</android.support.constraint.ConstraintLayout>